Fix secondary navigation wrapping issue (#2467)
* Fix nav wrap

* Fix nav

--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -139,7 +139,6 @@
 
   .nav-secondary,
   .nav-tertiary {
-
     .p-inline-list__link,
     .p-breadcrumbs__link {
       font-size: .875rem;
@@ -345,7 +344,6 @@
   }
 
   .nav-tertiary__menu {
-    white-space: normal;
     width: 85%;
 
     .p-inline-list {
@@ -380,5 +378,9 @@
         margin-right: 1.5rem;
       }
     }
+  }
+
+  .nav-secondary .p-inline-list__item {
+    white-space: normal;
   }
 }
